raw: configuring a postgres db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=simplified-elo-payment
+
+spring.datasource.url=jdbc:postgresql://localhost:5435/elo
+spring.datasource.username=${POSTGRE_USERNAME}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+#spring.docker.compose.enabled=false
